# LearningCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: CODEOWNERS
Semester_1/BAALOC/HW_2/: Task6.cpp
Semester_1/BAALOC/HW_3/: Task1.cpp  Task2.cpp  Task5.cpp
Semester_1/BAALOC/HW_4/: Task1.cpp  Task4.cpp
Semester_1/BAALOC/HW_6/: Task3.cpp  Task4.cpp
Semester_1/EgorDevRus/HW_1/: 11.cpp
Semester_1/EgorDevRus/HW_3/: 2.cpp
Semester_1/Fq1jjeR/HW_2/: 4_Task.cpp
Semester_1/Fq1jjeR/HW_3/: 1_Task.cpp  2_Task.cpp  4_Task.cpp  6_Task.cpp
Semester_1/Fq1jjeR/HW_4/: 1_Task.cpp  2_Task.cpp  4_Task.cpp  5_Task.cpp  6_Task.cpp
Semester_1/Fq1jjeR/HW_5/: 1_Task.cpp  3.4_3.6_Task.cpp  6_Task.cpp
Semester_1/Fq1jjeR/HW_6/: 1_Task.cpp  2_Task.cpp  3_Task.cpp  4_Task.cpp
Semester_1/MXLNIK/HW_1/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Semester_1/MXLNIK/HW_2/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Semester_1/MXLNIK/HW_3/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Semester_1/MXLNIK/HW_4/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
Semester_1/MXLNIK/HW_5/: Task1.cpp  Task2.cpp  Task3.1.cpp  Task3.4.cpp  Task4.13.cpp  Task4.30.cpp  Task4.31.cpp  Task5.16.cpp  Task5.4.cpp  Task5.9.cpp  Task6.cpp
Semester_1/MXLNIK/HW_6/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Semester_1/Thesavewill/HW_1/: Task2.cpp  Task4.cpp
Semester_1/Thesavewill/HW_2/: Task1.cpp  Task2.cpp
Semester_1/Thesavewill/HW_5/: Task1.cpp  Task5_2.cpp
Semester_1/Thesavewill/HW_6/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
Semester_1/Vennilay/HW_1/: Task2.cpp
Semester_1/Vennilay/HW_2/: Task1.cpp  Task6.cpp
Semester_1/Vennilay/HW_3/: Task1.cpp  Task2.cpp  Task3.cpp  Task5.cpp  Task6.cpp
Semester_1/Vennilay/HW_6/: Task1.cpp  Task4.cpp  Task5.cpp
Semester_1/Vondre/HW_1/: Task2.cpp
Semester_1/Vondre/HW_2/: vuzpr2.1.cpp  vuzpr2.2.cpp  vuzpr2.3.cpp  vuzpr2.4.cpp  vuzpr2.5.cpp  vuzpr2.6.cpp
Semester_1/Vondre/HW_3/: vuz3.1.cpp  vuz3.2.cpp
Semester_1/Vondre/HW_4/: vuz4.1.cpp  vuz4.2.cpp  vuz4.5.cpp  vuz4.6.cpp
Semester_1/lkzz13/HW_1/: 1.cpp
Semester_1/lkzz13/HW_2/: 2.cpp
Semester_1/lkzz13/HW_3/: 5.cpp
Semester_1/lkzz13/HW_4/: 1.cpp  2.cpp  3.cpp  6.cpp
Semester_1/lkzz13/HW_5/: 3.13.cpp  4.28.cpp  4.31.cpp  5.4.cpp
Semester_2/Thesavewill/HW_1/: Task1.cpp  Task1OOP.cpp
Semester_2/Vondre/siaod/: 1.cpp  delFirstMetod.cpp  delMetods.cpp  delSecondMethod.cpp  sort.cpp
docs/: index.html
files/BAALOC/HM_3/: task1.txt
files/BAALOC/HW_5/: Task3.txt
files/Fq1jjeR/HM_3/: 1_Task.txt  2_Task.txt  6_Task.txt
files/Fq1jjeR/HW_3/: 2_Task.txt  6_Task.txt
files/Fq1jjeR/HW_5/: 3_Task.txt  5.1_Task.txt  A.txt  B.txt  C.txt  numbers.txt  primes.txt
files/Fq1jjeR/prikolushechki/: Otvetu na ekzamen  README.md  dafda
files/Thesavewill/: MovmentCursor.cpp
files/Thesavewill/HM_3/: task1.txt
files/Thesavewill/cpp slop/: !.txt  FormatString.cpp  README.md
files/Vennilay/HW_3/: task2.txt
files/Vondre/HM_3/: task1.txt  task2.txt  task6.txt
files/Vondre/HW_3/: task2.txt
files/lkzz13/practice 1/: 2.cpp  4.cpp  5.cpp
files/lkzz13/practice 3/: 2.cpp  4.cpp
homework/BAALOC/HM_2/: task_3.cpp  task_5.cpp
homework/BAALOC/HM_3/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task6.cpp  task1.cpp  task2.cpp
homework/BAALOC/HW_2/: Task1  Task1.cpp
homework/BAALOC/HW_3/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp
homework/BAALOC/HW_4/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task6.cpp
homework/BAALOC/HW_5/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5_4.cpp  Task5_6.cpp  Task6.cpp
homework/BAALOC/HW_6/: Task1.cpp  Task2.cpp  Task4.cpp  Task5.cpp
homework/EgorDevRus/1 Homework/: prof3.cpp
homework/EgorDevRus/2 Homework/: 2.1.cpp  2.2.cpp  2.4.cpp  ALL 1-6.cpp
homework/EgorDevRus/3 Homework/: 1.cpp  5.cpp  ALL 1-6.cpp
homework/EgorDevRus/4 Homework/: 2.cpp  4.cpp  5.pptx
homework/EgorDevRus/HW_1/: 5.cpp  Task1.cpp
homework/EgorDevRus/HW_2/: 2.3.cpp  2.5.cpp  2.6.cpp
homework/EgorDevRus/HW_3/: 3.3   file.cpp  3.cpp
homework/Fq1jjeR/HM_1/: 3_Task.cpp  4_Task.cpp  6_Task.cpp
homework/Fq1jjeR/HM_3/: 1_Task.cpp  2_Task.cpp  3_Task.cpp  5_Task.cpp
homework/Fq1jjeR/HW_1/: 1_Task.cpp  2_Task.cpp  5_Task.cpp
homework/Fq1jjeR/HW_2/: 1_Task.cpp  2_Task.cpp  3_Task.cpp  5_Task.cpp  6_Task.cpp
homework/Fq1jjeR/HW_3/: 1_Task.cpp  2_Task.cpp  3_Task.cpp  4_Task.cpp  5_Task.cpp  6_Task.cpp
homework/Fq1jjeR/HW_4/: 1_Task.cpp  2_Task.cpp  3_Task.cpp  4_Task.cpp  5_Task.cpp  6_Task.cpp
homework/Fq1jjeR/HW_5/: 1_Task.cpp  2_Task.cpp  3.4_3.6_Task.cpp  3_Task.cpp  4_Task.cpp  5.1_Task.cpp  5.2_Task.cpp  5.3_Task.cpp  5.4_Task.cpp  5.9_Task.cpp  5_Task.cpp  6_Task.cpp  Test.cpp
homework/Fq1jjeR/HW_6/: 1_Task.cpp  2_Task.cpp  4_Task.cpp  5_Task.cpp
homework/Freez1/1 Homework/: 3.cpp  4.cpp  ax.cpp
homework/Freez1/3 Homework/: 4.cpp  6.cpp
homework/Freez1/4 Homework/: 1.cpp
homework/HM_1/Vennilay/: Task1.cpp  Task3.cpp  Task4.cpp  test.cpp
homework/HM_2/BAALOC/: task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
homework/HM_2/Vennilay/: Task3.cpp  Task5.cpp
homework/HM_3/: 1_Task.cpp
homework/HM_3/BAALOC/: task1.cpp  task2.cpp  task2.txt  task3.cpp
homework/HM_3/Vennilay/: Task1.cpp
homework/HM_3/txt files/: 1_Task.txt
homework/MXLNIK/: README.md
homework/Thesavewill/: README.md
homework/Thesavewill/HM_1/: 29.09_5.cpp  Task1.cpp
homework/Thesavewill/HM_3/: 13.10_4.cpp
homework/Thesavewill/HM_4/: 27.10_4.cpp
homework/Thesavewill/HW_1/: 16.09_1.cpp  16.09_3.cpp  16.09_5.cpp  16.09_6.cpp
homework/Thesavewill/HW_2/: 29.09_3.cpp  29.09_4.cpp  29.09_6.cpp
homework/Thesavewill/HW_3/: 13.10_1.cpp  13.10_2.cpp  13.13_3.cpp  Task5.cpp  Task6.cpp
homework/Thesavewill/HW_4/: 27.10_1.cpp  27.10_3.cpp  27.10_6.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task6.cpp
homework/Thesavewill/HW_5/: Task1.cpp  Task2.cpp  (+12 more)
homework/Vondre1/: README.md
practise/BAALOC/: README.md
(+285 files in other folders)
